update assessment01 rakefile

--- a/assessment01/Rakefile
+++ b/assessment01/Rakefile
@@ -1,7 +1,9 @@
 require 'rspec/core/rake_task'
 
 RSpec::Core::RakeTask.new(:spec) do |t|
-  t.pattern = "*_spec.rb"
+  t.pattern = "assessment01_spec.rb"
+  t.rspec_opts = ["--format documentation", "--color"]
+  t.rspec_opts << "-I #{ARGV[1]}"
 end
 
 task :default => :spec
