--- a/assessment01/Rakefile
+++ b/assessment01/Rakefile
@@ -3,7 +3,9 @@ require 'rspec/core/rake_task'
 RSpec::Core::RakeTask.new(:spec) do |t|
   t.pattern = "assessment01_spec.rb"
   t.rspec_opts = ["--format documentation", "--color"]
-  t.rspec_opts << "-I #{ARGV[1]}"
+
+  # uncomment to grade student submission
+#  t.rspec_opts << "-I #{ARGV[1]}"
 end
 
 task :default => :spec
