assessment specs: make require not relative
Should be handled by -I

--- a/assessment01/Rakefile
+++ b/assessment01/Rakefile
@@ -4,8 +4,8 @@ RSpec::Core::RakeTask.new(:spec) do |t|
   t.pattern = "assessment01_spec.rb"
   t.rspec_opts = ["--format documentation", "--color"]
 
-  # uncomment to grade student submission
-#  t.rspec_opts << "-I #{ARGV[1]}"
+  # rake spec .
+  t.rspec_opts << "-I #{ARGV[1]}"
 end
 
 task :default => :spec
