--- a/assessment02/Rakefile
+++ b/assessment02/Rakefile
@@ -4,7 +4,8 @@ RSpec::Core::RakeTask.new(:spec) do |t|
   t.pattern = "blackjack_spec.rb"
   t.rspec_opts = ["--format documentation", "--color", "--order=default"]
 
-#  t.rspec_opts << "-I #{ARGV[1]}"
+  # rake spec .
+  t.rspec_opts << "-I #{ARGV[1]}"
 end
 
 task :default => :spec
