--- a/assessment02a/Rakefile
+++ b/assessment02a/Rakefile
@@ -1,10 +1,10 @@
 require 'rspec/core/rake_task'
 
 RSpec::Core::RakeTask.new(:spec) do |t|
-  t.pattern = "crazy_eights_spec.rb"
+  t.pattern = ARGV[2]
   t.rspec_opts = ["--format documentation", "--color", "--order=default"]
 
-  # rake spec .
+  # rake spec . deck_spec.rb
   t.rspec_opts << "-I #{ARGV[1]}"
 end
 
