--- a/assessment02/Rakefile
+++ b/assessment02/Rakefile
@@ -1,11 +1,9 @@
 require 'rspec/core/rake_task'
 
 RSpec::Core::RakeTask.new(:spec) do |t|
-  t.pattern = "blackjack_spec.rb"
-  t.rspec_opts = ["--format documentation", "--color", "--order=default"]
-
-  # rake spec .
-  t.rspec_opts << "-I #{ARGV[1]}"
+  t.rspec_opts = ["--format documentation", "--color", "--order=default", "--fail-fast"]
+  t.pattern = "spec/*_spec.rb"
+  t.pattern = ARGV[1] if ARGV.count > 1
 end
 
 task :default => :spec
